[gd_scene load_steps=7 format=3 uid="uid://cywnqfgnpevs7"]

[ext_resource type="Script" path="res://interactables/key_door/key_door.gd" id="1_garwr"]
[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://art/objects/Door_01.png" id="1_iwfgb"]

[sub_resource type="Gradient" id="Gradient_woibm"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_icshh"]
gradient = SubResource("Gradient_woibm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ne0i"]
size = Vector2(68, 128)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_udbld"]
properties/0/path = NodePath(".:is_open")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="KeyDoor" type="Node2D" node_paths=PackedStringArray("door_open", "door_closed")]
script = ExtResource("1_garwr")
door_open = NodePath("DoorOpen")
door_closed = NodePath("DoorClosed")

[node name="DoorClosed" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(0, -70)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_iwfgb")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(0, -65)
scale = Vector2(0.275, 130)
texture = SubResource("GradientTexture1D_icshh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_7ne0i")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_udbld")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
